# Gemini-discovers-Diamonds

./: .gitignore  ACTUAL-STATUS-TRUTH.md  AGENTS.md  AUTOMATED_TYCOON_CAPABILITIES.md  FACELESS-SHORTS-OUTSTANDING-ITEMS.md  FACELESS-YT-SHORTS-PROJECT-INFO.md  FIXES-APPLIED-SUMMARY.md  LICENSE  Makefile  PRIORITY-COMPLETION-REPORT.md  README.md  START-HERE.md  STRICT_EXECUTION_MECHANISM.md  TRANSFORMATION-COMPLETE.md  build.command  default.project.json  diamond_finder.py  index.html  ironforge.spec  package-lock.json  package.json  pyproject.toml  replace_all.py  server.js  setup.command  strict_execution.py  test-report.md  test_auth.txt  test_replace_all.py  test_strict_execution.py  update.command
.cursor/rules/: roblox-mcm.md
ai-over-coffee/: .env.example  PRD.md  RISK-REGISTER.md  ROADMAP.md  WEEKLY-CHECKLIST.md  package.json  server.js
ai-over-coffee/config/: assertions.js  tiers.js
ai-over-coffee/middleware/: auth.js
ai-over-coffee/routes/: admin.js  checkout.js  dashboard.js
ai-over-coffee/services/: brevo.js  dead-letter-queue.js  episodes.js  members.js  synaptic-relay.js
ai-over-coffee/views/: landing.js
architecture/: __init__.py  backbone_trigger.py  bootstrap_resolver.py  bridge_router.py  canonical-config.json  cursorrules_enforcer.py
content-shield/: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.cfg
content-shield/.github/workflows/: ci.yml  lint.yml  publish.yml
content-shield/docs/: api_reference.md  brand_profiles.md  for_agencies.md  index.md  integrations.md  pain_line_setup.md  quickstart.md  retry_playbook.md  shields_guide.md
content-shield/examples/01_quickstart/: README.md  validate_batch.py  validate_single.py
content-shield/examples/02_brand_profile/: README.md  create_profile.py  my_brand.json  validate_against_brand.py
content-shield/examples/03_content_pipeline/: README.md  batch_processor.py  generate_and_validate.py  sample_content.json
content-shield/examples/04_agency_workflow/: README.md  multi_client.py  report_generator.py
content-shield/examples/04_agency_workflow/client_configs/: client_a.json  client_b.json
content-shield/examples/05_chaos_demo/: README.md  chaos_agent.py  inject_bad_content.py  monitor.py  run.py
content-shield/infra/docker/: Dockerfile  docker-compose.yml
content-shield/infra/grafana/dashboards/: content_quality.json  pain_line.json
content-shield/infra/grafana/provisioning/dashboards/: content_shield.yml
content-shield/infra/grafana/provisioning/datasources/: bigquery.yml
content-shield/infra/terraform/: bigquery.tf  gcf.tf  main.tf  outputs.tf  pubsub.tf  variables.tf
content-shield/src/content_shield/: __init__.py  config.py
content-shield/src/content_shield/agents/: __init__.py  base_agent.py  claude_agent.py  gemini_agent.py  openai_agent.py  router.py
content-shield/src/content_shield/analyzers/: __init__.py  email_validator.py  phone_validator.py  readability.py  text_analyzer.py  url_validator.py
content-shield/src/content_shield/brand/: __init__.py  profile.py  terminology.py  voice_matcher.py
content-shield/src/content_shield/brand/templates/: casual.json  luxury.json  professional.json  technical.json
content-shield/src/content_shield/collector/: __init__.py  gcf_handler.py  local_handler.py  storage.py
content-shield/src/content_shield/dashboard/: __init__.py  grafana_generator.py  pain_line.py
content-shield/src/content_shield/dashboard/templates/: content_quality.json  economic_overview.json  pain_line.json
content-shield/src/content_shield/emitter/: __init__.py  base.py  console.py  pubsub.py  slack.py  webhook.py
content-shield/src/content_shield/integrations/: __init__.py  hubspot.py  mailchimp.py  shopify.py  webhook_generic.py  wordpress.py
content-shield/src/content_shield/resilience/: __init__.py  circuit_breaker.py  dlq.py  error_classifier.py  retry.py  timeout.py
content-shield/src/content_shield/schema/: __init__.py  content.py  event.py  metrics.py  validation.py
content-shield/src/content_shield/shields/: __init__.py  base.py  brand_voice.py  competitor_mention.py  contact_validation.py  factual_claims.py  hallucination.py  legal_compliance.py  runner.py  sentiment.py  toxicity.py
content-shield/tests/: conftest.py
content-shield/tests/test_agents/: test_base_agent.py  test_router.py
content-shield/tests/test_analyzers/: test_contact_validators.py  test_text_analyzer.py  test_url_validator.py
content-shield/tests/test_brand/: test_profile.py  test_voice_matcher.py
content-shield/tests/test_resilience/: test_circuit_breaker.py  test_dlq.py  test_error_classifier.py  test_retry.py
content-shield/tests/test_schema/: test_content.py  test_event.py  test_validation.py
content-shield/tests/test_shields/: test_brand_voice.py  test_competitor_mention.py  test_contact_validation.py  test_factual_claims.py  test_hallucination.py  test_legal_compliance.py  test_runner.py  test_sentiment.py  test_toxicity.py
ironforge/: __init__.py  cli.py
ironforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ironforge/commands/: build.py  check.py  config.py  info.py  init.py
ironforge/core/: __init__.py  config.py  context.py  errors.py
ironforge/utils/: __init__.py  display.py  fs.py  process.py
src/client/: init.client.lua
src/gui/: MainHUD.lua
src/ironforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_build.py  test_clean.py  test_cli.py  test_cli_main.py  test_config.py  test_context.py  test_display.py  test_engine.py  test_errors.py  test_fs.py  test_init.py  test_main_entry.py  test_process.py  test_status.py  test_version.py
(+57 files in other folders)
